<resources>
    <string name="app_name">Let\'s Dart</string>
    <string name="text_no1">1</string>
    <string name="text_no2">2</string>
    <string name="text_no3">3</string>
    <string name="text_no4">4</string>
    <string name="text_no5">5</string>
    <string name="text_no6">6</string>
    <string name="text_no7">7</string>
    <string name="text_no8">8</string>
    <string name="text_no9">9</string>
    <string name="text_no10">10</string>
    <string name="text_no11">11</string>
    <string name="text_no12">12</string>
    <string name="text_no13">13</string>
    <string name="text_no14">14</string>
    <string name="text_no15">15</string>
    <string name="text_no16">16</string>
    <string name="text_no17">17</string>
    <string name="text_no18">18</string>
    <string name="text_no19">19</string>
    <string name="text_no20">20</string>
    <string name="text_no25">25</string>
    <string name="text_no0">0</string>
    <string name="text_double">DOUBLE</string>
    <string name="text_triple">TRIPLE</string>
    <string name="text_undo">UNDO</string>
    <string name="double_info">D</string>
    <string name="triple_info">T</string>
    <string name="avg_symbol">ø</string>
    <string name="sets_info">S</string>
    <string name="legs_info">L</string>
    <string name="double_format">D%d</string>
    <string name="triple_format">T%d</string>
    <string name="text_startpoints">Startpoints</string>
    <string name="text_out">Checkout type</string>
    <string name="text_singleO">Straight</string>
    <string name="text_doubleO">Double</string>
    <string name="text_sets">Sets</string>
    <string name="text_legs">Legs</string>
    <string name="text_win_condition">Win condition</string>
    <string name="text_best_of">Best Of</string>
    <string name="text_first_to">First To</string>
    <string name="text_lets_dart">LET\'S DART!</string>
    <string name="text_end_game_dialog_message">You will not be able to undo this operation after you click continue!</string>
    <string name="text_end_game_dialog_title">Game finished! Undo or continue?</string>
    <string name="text_dialog_continue">Continue</string>
    <string name="text_dialog_undo">Undo</string>
    <string name="text_create_new_player">Create new player</string>
    <string name="text_hint_name">Name</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_create">create</string>
    <string name="text_play_now">PLAY NOW</string>
    <string name="text_players">PLAYERS</string>
    <string name="text_tournaments">TOURNAMENTS</string>
    <string name="text_leagues">LEAGUES</string>
    <string name="text_statistics">STATISTICS</string>
    <string name="text_delete">delete</string>
    <string name="text_rename">rename</string>
    <string name="text_manage_players">MANAGE YOUR PLAYERS</string>
    <string name="text_rename_player">Rename player</string>
    <string name="text_create_new_league">Create new league</string>
    <string name="text_create_new_tournament">Create new tournament</string>
    <string name="text_manage_leagues">Manage your leagues</string>
    <string name="text_manage_tournaments">Manage your tournaments</string>
    <string name="text_tournament_name">Name</string>
    <string name="text_continue">continue</string>
    <string name="text_choose_players">Choose players</string>
    <string name="text_current_standings">Current standings</string>
    <string name="text_play_next_game">Play next game</string>
    <string name="text_wins">Wins:</string>
    <string name="text_defeats">Defeats:</string>
    <string name="text_legs_won">Legs won:</string>
    <string name="text_legs_lost">Legs lost:</string>
    <string name="text_points_diff">Points diff.:</string>
    <string name="text_vs">VS</string>
    <string name="text_play">play</string>
    <string name="text_standings">STANDINGS</string>
    <string name="text_games">GAMES</string>
    <string name="text_game_finished">GAME FINISHED</string>
    <string name="text_won"> %1$s WON!</string>
    <string name="text_all_games_finished">All games have been finished!</string>
    <string name="text_end_league">end league</string>
    <string name="text_legs_ratio">Legs W/L:</string>
    <string name="text_decider">Decider leg/set order</string>
    <string name="text_abort_game_dialog_title">Abort game?</string>
    <string name="text_abort_game_dialog_message">If you exit the game now you will lose your progress."</string>
    <string name="text_dialog_abort">Abort</string>
    <string name="text_dialog_exit">exit</string>
    <string name="text_exit_game_dialog_title">Exit game?</string>
    <string name="text_exit_game_dialog_message">Do you really want to exit the game?"</string>
    <string name="text_play_rematch">Play rematch</string>
    <string name="text_end_tournament">end tournament</string>
    <string name="text_tournament">Tournament</string>
    <string name="text_final">final</string>
    <string name="text_semifinal">semifinals</string>
    <string name="text_quarterfinal">quarterfinals</string>
    <string name="text_round">round %1$d</string>
    <string name="text_no_checkouts">There are no possible checkouts!</string>
    <string name="text_checkout">Possible checkout: %1$s</string>
    <string name="text_toggle_all">All games</string>
    <string name="text_toggle_remaining">Remaining games</string>
    <string name="text_delete_dialog_title">Deleting %1$s</string>
    <string name="text_delete_dialog">Are you sure you want to delete this %1$s?</string>
    <string name="text_total_games">Total games:</string>
    <string name="text_total_wins">Total wins:</string>
    <string name="text_total_defeats">Total defeats:</string>
    <string name="text_total_won_legs">Total won legs:</string>
    <string name="text_total_lost_legs">Total lost legs:</string>
    <string name="text_total_points">Total points:</string>
    <string name="text_total_darts">Total darts:</string>
    <string name="text_total_singles">Total singles:</string>
    <string name="text_total_doubles">Total doubles:</string>
    <string name="text_total_triples">Total triples:</string>
    <string name="text_detailed_stats">Detailed stats:</string>
    <string name="text_percentages">Percentages</string>
    <string name="text_totals">Totals</string>
    <string name="text_average">Average:</string>
    <string name="text_stats"> %1$s\'s stats</string>
    <string name="text_only_stats">stats</string>
    <string name="text_basic_stats">Basic stats:</string>
    <string name="text_filter_players">Filter players...</string>
</resources>