<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.league.LeaguePagerFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutEndLeague"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_back"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textAllGamesFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_all_games_finished"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonEndLeague"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonEndLeague"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/text_end_league"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upperTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textLegsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textLegs"
                app:layout_constraintTop_toBottomOf="@+id/textLeagueName"
                tools:text="10" />

            <TextView
                android:id="@+id/textLeagueName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="League" />

            <TextView
                android:id="@+id/textStartScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_startpoints"
                app:layout_constraintEnd_toStartOf="@+id/textStartScoreValue"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLeagueName" />

            <TextView
                android:id="@+id/textStartScoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textSets"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textStartScore"
                app:layout_constraintTop_toBottomOf="@+id/textLeagueName"
                tools:text="301" />

            <TextView
                android:id="@+id/textSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_sets"
                app:layout_constraintEnd_toStartOf="@+id/textSetsValue"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textStartScoreValue"
                app:layout_constraintTop_toBottomOf="@+id/textLeagueName" />

            <TextView
                android:id="@+id/textSetsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textLegs"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textSets"
                app:layout_constraintTop_toBottomOf="@+id/textLeagueName"
                tools:text="15" />

            <TextView
                android:id="@+id/textLegs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_legs"
                app:layout_constraintEnd_toStartOf="@+id/textLegsValue"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textSetsValue"
                app:layout_constraintTop_toBottomOf="@+id/textLeagueName" />

            <TextView
                android:id="@+id/textCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textCheckoutValue"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textStartScore" />

            <TextView
                android:id="@+id/textCheckoutValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textWinCondition"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textCheckout"
                app:layout_constraintTop_toBottomOf="@+id/textStartScore"
                tools:text="Straight out" />

            <TextView
                android:id="@+id/textWinConditionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textWinCondition"
                app:layout_constraintTop_toBottomOf="@+id/textStartScore"
                tools:text="Best of" />

            <TextView
                android:id="@+id/textWinCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_win_condition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textWinConditionValue"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textCheckoutValue"
                app:layout_constraintTop_toBottomOf="@+id/textStartScore" />

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textLeagueName"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperTextLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_standings" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_games" />

        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/background_default"
            app:layout_constraintBottom_toTopOf="@+id/layoutEndLeague"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            app:layout_constraintVertical_bias="1.0">


        </androidx.viewpager2.widget.ViewPager2>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>